cg_cfg/OpenSSL/7f0a8dc/bug_trace/traces/bug_248.txt
/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/bn/bn_blind.c:136: error: DEAD_STORE
  The value written to &ret (type int) is never used.
Showing all 1 steps of the trace


/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/bn/bn_blind.c:136:5: Write of unused value
134.   int BN_BLINDING_convert_ex(BIGNUM *n, BIGNUM *r, BN_BLINDING *b, BN_CTX *ctx)
135.   {
136.       int ret = 1;
           ^
137.   
138.       bn_check_top(n);
